--- a/css/LowerThird_2line.css
+++ b/css/LowerThird_2line.css
@@ -22,6 +22,10 @@
 
 }
 
+html { 
+    overflow: hidden; 
+}
+
 body {
 	margin:0px;
 	background-color: rgba(0, 0, 0, 0);
@@ -32,73 +36,43 @@ body {
 #board {
 	position:absolute;
 	top:0px;
-	left:0px;
-	width:1280px;
-	height:100px;
-	background-image:url('../images/game.png');
+	left:-1920px;
+	width:1920px;
+	height:1080px;
+	background-image:url(../images/lt2l.png);
 }
 
-#pName1 {
+#mText1 {
+	color: #FFF;
 	position:absolute;
-	left:175px;
-	top:3px;
-	width:330px;
-	font-size:20px;
+	left:200px;
+	top:750px;
+	width:1200px;
+	height:130px;
+	font-size:95px;
+	font-family: 'SansationBold';
+	text-align:left;
+	overflow:hidden;
+		text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
 }
-#pName2 {
+#mText2 {
+	color: #FFF;
+	overflow:hidden;
 	position:absolute;
-	left:775px;
-	top:3px;
-	width:330px;
-	font-size:20px;
+	left:200px;
+	top:905px;
+	height:140px;
+	width:1200px;
+	font-size:55px;
+	font-family: 'SansationBold';
 	text-align:right;
-}
-#pScore1 {
-	position:absolute;
-	left:511px;
-	top:3px;
-	width:47px;
-	font-size:20px;
-	text-align:center;
-}
-#pScore2 {
-	position:absolute;
-	left:722px;
-	top:3px;
-	width:47px;
-	font-size:20px;
-	text-align:center;
-}
-
-#pFlag1 {
-	position:absolute;
-	left:126px;
-	top:0px;
-}
-
-#pFlag2 {
-	position:absolute;
-	left:1112px;
-	top:0px;
-}
-
-#mText3 {
-	color: #333333;
-	position:absolute;
-	left:560px;
-	top:1px;
-	width:160px;
-	font-size:11px;
-	font-family: 'SansationBold';
-	text-align:center;
-}
-#mText4 {
-	color: #FFFFFF;
-	position:absolute;
-	left:560px;
-	top:23px;
-	width:160px;
-	font-size:11px;
-	font-family: 'SansationBold';
-	text-align:center;
+		text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
 }
