--- a/css/ScoreBoard-gray.css
+++ b/css/ScoreBoard-gray.css
@@ -22,6 +22,10 @@
 
 }
 
+html { 
+    overflow: hidden; 
+}
+
 body {
 	margin:0px;
 	background-color: rgba(0, 0, 0, 0);
@@ -33,33 +37,74 @@ body {
 	position:absolute;
 	top:0px;
 	left:0px;
-	width:1920px;
-	height:1080px;
+	width:1280px;
+	height:100px;
+	background-image:url('../images/game2.png');
 }
 
-#vs {
+#pName1 {
 	position:absolute;
-	top:-1080px;
-	left:0px;
-	width:1920px;
-	height:1080px;
-	background-image:url(../images/teams/background.png);
+	left:175px;
+	top:13px;
+	width:330px;
+	font-size:20px;
+	color:#000;
+}
+#pName2 {
+	position:absolute;
+	left:775px;
+	top:13px;
+	width:330px;
+	font-size:20px;
+	text-align:right;
+	color:#000;
+}
+#pScore1 {
+	position:absolute;
+	left:511px;
+	top:13px;
+	width:47px;
+	font-size:20px;
+	text-align:center;
+}
+#pScore2 {
+	position:absolute;
+	left:722px;
+	top:13px;
+	width:47px;
+	font-size:20px;
+	text-align:center;
 }
 
-#board1 {
+#pFlag1 {
 	position:absolute;
-	top:380px;
-	left:-320px;
-	width:320px;
-	height:320px;
-	background-image:url(../images/teams/Team_Left.png);
+	left:126px;
+	top:10px;
 }
 
-#board2 {
+#pFlag2 {
 	position:absolute;
-	top:380px;
-	left:1920px;
-	width:320px;
-	height:320px;
-	background-image:url(../images/teams/Team_Right.png);
+	left:1112px;
+	top:10px;
+}
+
+#mText3 {
+	color: #FFFFFF;
+	position:absolute;
+	left:560px;
+	top:11px;
+	width:160px;
+	font-size:11px;
+	font-family: 'SansationBold';
+	text-align:center;
+}
+#mText4 {
+	color: #FFFFFF;
+	position:absolute;
+	left:560px;
+	top:33px;
+	width:160px;
+	font-size:11px;
+	font-family: 'SansationBold';
+	text-align:center;
 }
