--- a/css/commentator.css
+++ b/css/commentator.css
@@ -22,6 +22,10 @@
 
 }
 
+html { 
+    overflow: hidden; 
+}
+
 body {
 	margin:0px;
 	background-color: rgba(0, 0, 0, 0);
@@ -41,11 +45,11 @@ body {
 #cTitle1 {
 	color: #000;
 	position: absolute;
-	left: 19px;
-	top: 20px;
-	width: 466px;
-	height: 107px;
-	font-size: 25px;
+	left: 20px;
+	top: 24px;
+	width: 464px;
+	height: 96px;
+	font-size: 20px;
 	font-family: 'SansationBold';
 	text-align: left;
 	overflow: hidden;
@@ -54,9 +58,9 @@ body {
 	color: #000;
 	overflow:hidden;
 	position:absolute;
-	left:17px;
-	top:129px;
-	width:466px;
+	left:20px;
+	top:132px;
+	width:464px;
 	font-size:22px;
 	font-family: 'SansationBold';
 	text-align:right;
